# asset-master-data

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Makefile  OPERATIONS_REFERENCE.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
config/: config.yaml  entitlements.example.yaml
deploy/systemd/: asset-master-data.service.tpl  asset-master-data.slice.tpl  asset-master-refresh.service.tpl  asset-master-refresh.timer.tpl  deploy.sh  install_systemd.sh
docs/: API.md  TECHNICAL_DEBT.md  VERSIONING.md
scripts/: benchmark_mapping_resolver.py  runtime_backup.py
src/mdv/: __init__.py  auth.py  bundles.py  cli.py  collection.py  config.py  contract_metadata.py  db.py  manual_asset_actions.json  matching.py  models.py  normalization.py  resolution.py  version.py  web.py
tests/: test_added_venues.py  test_bitmart.py  test_bundles.py  test_cli.py  test_collection.py  test_config_auth.py  test_connectors.py  test_mappings.py  test_matching.py  test_new_venues.py  test_runtime_backup.py  test_store.py  test_version.py  test_web.py  test_xt.py
tests/fixtures/: binance_financing.json  bitfinex_derivative_product_info.json  bitfinex_derivatives_status.json  bitfinex_financing.json  bitfinex_malformed.json  bitfinex_partial.json  bitfinex_success.json  bitget_contracts.json  bitget_financing.json  bitmart_malformed.json  bitmart_partial.json  bitmart_success.json  bybit_financing.json  bybit_inverse.json  bybit_linear.json  bybit_spot.json  coinbase_international_instruments.json  coinbase_malformed.json  coinbase_partial.json  coinbase_perpetuals_malformed.json  coinbase_perpetuals_partial.json  coinbase_perpetuals_success.json  coinbase_success.json  (+34 more)
(+48 files in other folders)
