[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "asset-master-data"
version = "0.4.0"
description = "Local-first master view of crypto assets and exchange markets"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "httpx>=0.27,<1",
  "jinja2>=3.1,<4",
  "pyyaml>=6,<7",
  "uvicorn>=0.30,<1",
]

[project.optional-dependencies]
dev = [
  "httpx2>=2,<3",
  "pytest>=8,<9",
]

[project.scripts]
mdv = "mdv.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mdv = ["templates/*.html", "migrations/*.sql"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
